tests/ui/consts/const-eval/validate_uninhabited_zsts.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/validate_uninhabited_zsts.rs:2:14
   |
LL |     unsafe { std::mem::transmute(()) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value: encountered a value of the never type `!`
   |
note: inside `foo`
  --> $DIR/validate_uninhabited_zsts.rs:2:14
   |
LL |     unsafe { std::mem::transmute(()) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^
note: inside `FOO`
  --> $DIR/validate_uninhabited_zsts.rs:16:33
   |
LL | const FOO: [empty::Empty; 3] = [foo(); 3];
   |                                 ^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/validate_uninhabited_zsts.rs:18:42
   |
LL | const BAR: [empty::Empty; 3] = [unsafe { std::mem::transmute(()) }; 3];
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^ constructing invalid value at .0: encountered a value of uninhabited type `Void`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
